// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegacyPlayerEvent can deserialize new state 1`] = `
LegacyPlayerEvent {
  "actionType": "PICK",
  "civilisation": Object {},
  "executingPlayer": "GUEST",
  "offset": 123,
  "player": "HOST",
}
`;

exports[`LegacyPlayerEvent can deserialize old state 1`] = `
LegacyPlayerEvent {
  "actionType": "PICK",
  "civilisation": Object {},
  "executingPlayer": "HOST",
  "offset": 123,
  "player": "HOST",
}
`;
